[package]
name = "kademlia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
ethereum-types = "0.15.1"
rand = "0.9.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.47.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.47.0", features = ["full", "test-util"] }

[lib]
name = "kademlia"
path = "src/lib.rs"
