[package]
name = "kademlia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
ethereum-types = "0.15.1"
rand = "0.9.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.47.0", features = ["full"] }
clap = { version = "4.5.17", features = ["derive"] }
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ctor = "0.2"

[dev-dependencies]
tokio = { version = "1.47.0", features = ["full", "test-util"] }

[lib]
name = "kademlia"
path = "src/lib.rs"
